--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
 
 
 
-
-
-
+  
     <h2 class="text-center mt-5 mb-5"> Tabla :)</h2>
+
+    <div class="input-group mb-3">
+      <input type="text" class="form-control input_buscar" placeholder="Buscar Registro" oninput="buscarRegistros()" aria-label="Recipient's username" aria-describedby="basic-addon2">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary boton_buscar" type="button" >Buscar</button>
+      </div>
+    </div>
+
+
+
 
     <table class="table">
         <thead>
@@ -33,8 +41,6 @@
 
         </tbody>
       </table>
-
-
 
 
 
