--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Registros</title>
   </head>
   <body class="container">
 
 
 
   
-    <h2 class="text-center mt-5 mb-5"> Tabla :)</h2>
+    <h2 class="text-center mt-5 mb-5"> Registros</h2>
 
     <div class="input-group mb-3">
       <input type="number" class="form-control input_buscar" placeholder="Buscar Registro" oninput="buscarRegistros()" aria-label="Recipient's username" aria-describedby="basic-addon2">
@@ -31,6 +31,7 @@
             <th scope="col">#</th>
             <th scope="col">Longitud</th>
             <th scope="col">Latitud</th>
+            <th scope="col">Mapa</th>
 
           </tr>
         </thead>
