--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Registros</title>
+    <link rel="icon" type="image/x-icon" href="icono1.svg">
   </head>
   <body class="container">
 
 
 
   
-    <h2 class="text-center mt-5 mb-5"> Registros</h2>
+    <h2 class="text-center mt-5 mb-5"> Buscar Registros 🔎</h2>
 
     <div class="input-group mb-3">
       <input type="number" class="form-control input_buscar" placeholder="Buscar Registro" oninput="buscarRegistros()" aria-label="Recipient's username" aria-describedby="basic-addon2">
